--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -1,94 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.rsc.rschackathon">
+    package="com.rsc.rschackathon">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.NFC"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature
-            android:name="android.hardware.nfc"
-            android:required="true"/>
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-            android:theme="@style/AppTheme"
-            android:name=".RSCapp"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true">
-        <activity android:name=".activities.LoginActivity"/>
+        android:name=".RSCapp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".activities.LoginActivity" />
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.MainActivity"
-
-                android:screenOrientation="portrait">
+            android:name=".activities.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.ViewPagerActivity"/>
+            android:name=".activities.ViewPagerActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.RecyclerViewActivity"
-
-                android:screenOrientation="portrait"></activity>
+            android:name=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.CoolapsingToolbarActivity"/>
+            android:name=".activities.CoolapsingToolbarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
-                android:name="DATABASE"
-                android:value="sugar_example.db"/>
+            android:name="DATABASE"
+            android:value="sugar_example.db" />
         <meta-data
-                android:name="VERSION"
-                android:value="2"/>
+            android:name="VERSION"
+            android:value="2" />
         <meta-data
-                android:name="QUERY_LOG"
-                android:value="true"/>
+            android:name="QUERY_LOG"
+            android:value="true" />
         <meta-data
-                android:name="DOMAIN_PACKAGE_NAME"
-                android:value="com.rsc.rschackathon.database"/>
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.rsc.rschackathon.database" />
 
         <service android:name=".firebase.MyFirebaseMesagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service android:name=".firebase.MyFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
         <meta-data
-                android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/facebook_app_id"/>
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <activity
-                android:name="com.facebook.FacebookActivity"
-                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                android:label="@string/app_name"/>
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
         <activity
-                android:name="com.facebook.CustomTabActivity"
-                android:exported="true">
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="@string/fb_login_protocol_scheme"/>
+                <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
         <!--
@@ -100,53 +98,52 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="@string/google_maps_key"/>
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
         <activity
-
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.MapsActivity"
-                android:label="@string/title_activity_maps"
-
-                android:parentActivityName=".activities.RecyclerViewActivity"
-                android:screenOrientation="portrait"></activity>
-
+            android:name=".activities.MapsActivity"
+            android:label="@string/title_activity_maps"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.RegisterActivity"/>
+            android:name=".activities.RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.TeamActivity"
-                android:launchMode="singleTask"
-                android:parentActivityName=".activities.RecyclerViewActivity"
-                android:screenOrientation="portrait">
+            android:name=".activities.TeamActivity"
+            android:launchMode="singleTask"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="text/plain"/>
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
-                android:name=".activities.CreateTeamActivity"
-                android:parentActivityName=".activities.RecyclerViewActivity"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:name=".activities.CreateTeamActivity"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-                android:name=".activities.ServerTeamActivity"
-                android:launchMode="singleTask"
-                android:parentActivityName=".activities.RecyclerViewActivity"
-                android:screenOrientation="portrait">
-
-        </activity>
-
+            android:name=".activities.ServerTeamActivity"
+            android:launchMode="singleTask"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
-                android:name=".activities.QuestionActivity"
-                android:parentActivityName=".activities.RecyclerViewActivity"
-                android:screenOrientation="portrait"/>
-        <activity android:name=".activities.ResultsActivity"></activity>
+            android:name=".activities.QuestionActivity"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.ResultsActivity"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.HighScoreActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
